--- a/README.org
+++ b/README.org
@@ -1,4 +1,8 @@
 #+title: Resume stylesheet
 #+author: Nishant Elkunchwar
 
-The latex stylesheet for my resume. I may add an example tex file and the resulting example pdf if I feel like it.
+The latex stylesheet for my resume.
+
+** TODO
+- add a minimal example .tex file
+- add resulting pdfs (screen and print versions)
